# gridvox-sim-integration

./: .gitignore  AGENTS.md  CLEANUP-NEEDED.md  LiveRecording_head.tsx  temp_modify_live.py
.claude/: settings.local.json
ac/car-model-extractor/: .env.example  .gitignore  IMPLEMENTATION-SUMMARY.md  QUICK-START.md  README.md  package.json  tsconfig.json
all-sims/livery-builder/: 01-frame-by-frame-analysis.md  02-feature-catalog.md  03-gridvox-concept.md  03-simvox-concept.md  04-development-roadmap.md  05-ux-ui-improvements.md  06-community-features.md  07-3d-models-research.md  IMPLEMENTATION-CHECKLIST.md  IMPLEMENTATION-ROADMAP.md  LIVERY-BUILDER-EDITOR.md  POC-PSD-CANVAS-PLAN.md  POC-TAURI-IMPLEMENTATION.md  PRODUCTION-IMPLEMENTATION-PLAN.md  PSD-MANIPULATION-TECH-STACK.md  UI-DESIGN-PROMPT.md  UNIFIED-PIPELINE-ARCHITECTURE.md  gemini-stitch-interface-prompt.md  gemini-stitch-prompt-with-references.md  layers.md
all-sims/livery-converter/: .gitignore  README.md
all-sims/livery-converter/app/src-tauri/: Cargo.toml
all-sims/livery-converter/app/src-tauri/src/: main.rs
all-sims/livery-designer/: README.md
all-sims/sim-detection-listing/: .gitignore  CHANGELOG.md  INTEGRATION-GUIDE.md  PROJECT-SUMMARY.md  QUICK-START.md  README.md  example.ts  package.json  test-detailed.js  test-full-scan.js  test-quick.js
all-sims/ui-automation-recorder/: .env.example  .gitignore  README.md  package.json  requirements.txt  tsconfig.json
all-sims/ui-automation-recorder/src-tauri/: Cargo.toml  tauri.conf.json
all-sims/ui-automation-recorder/src-tauri/src/: main.rs  telemetry.rs
ams2/: AI_LIVERY_DESIGNER_RESEARCH.md
ams2-race-configuration/docs/: 01-deep-research.md  07-session-log-2025-11-03.md  08-reiza-contact-research.md  10-executive-summary.md  EMAIL-TEMPLATE-Reiza.txt  QUICK-REFERENCE.md  README-REIZA-CONTACT.md  README.md
ams2/ams2-ai-livery-converter/: AI_LIVERY_DESIGNER_RESEARCH.md  PROJECT_SETUP_COMPLETE.md  README.md  SELF-SUPERVISED-UV-LEARNING.md  index.html  vite.config.ts
ams2/ams2-ai-livery-converter/src-tauri/: Cargo.toml
ams2/ams2-ai-livery-converter/src-tauri/src/: lib.rs
ams2/ams2-ai-livery-designer/: .gitignore  PHASE_1_POC.md  PROJECT_SETUP_COMPLETE.md  QUICKSTART.md  README.md  RUN-ME.bat  SELF-SUPERVISED-UV-LEARNING.md  UV-MAPPING-AI-PLAN.md  WEEK-3-4-PLAN.md  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
ams2/ams2-car-image-extractor/: .gitignore  EXTRACTION_COMPLETE.md  GUIVEHICLEIMAGES_FIX.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  README.md  SETUP.md  package-lock.json  package.json  tsconfig.json
ams2/ams2-content-listing/: .gitignore  DDS_CONVERSION_GUIDE.md  DDS_DISPLAY_OPTIONS.md  README.md  USAGE.md  content-listing-full.txt  package-lock.json  package.json
ams2/ams2-overlays/: .gitignore  IMPROVEMENTS-SUMMARY.md  OVERLAY-POC-PLAN.md  QUICK-TEST-GUIDE.md  README.md  TRANSPARENCY-RESEARCH.md  index.html  overlay.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
ams2/ams2-overlays/src-tauri/: Cargo.toml  tauri.conf.json
ams2/ams2-overlays/src-tauri/capabilities/: main.json
ams2/ams2-overlays/src-tauri/src/: commands.rs  lib.rs  main.rs  telemetry_bridge.rs
ams2/ams2-telemetry-track-generator/src-tauri/: Cargo.toml  tauri.conf.json
ams2/ams2-telemetry-track-generator/src-tauri/capabilities/: default.json
ams2/ams2-telemetry-track-generator/src-tauri/src/: audio.rs  lib.rs  main.rs  processing.rs  run_type_storage.rs  telemetry.rs
savegame-reverse-engineering/: analysis-report.md  analyzer.js
(+1692 files in other folders)
