[package]
name = "ams2-ai-livery-designer"
version = "0.1.0"
description = "AMS2 AI Livery Designer POC"
authors = ["SimVox Team"]
edition = "2021"

[lib]
name = "ams2_ai_livery_designer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
