[package]
name = "ams2-overlay-poc"
version = "0.1.0"
description = "GridVox AMS2 Overlay POC"
authors = ["GridVox Team"]
edition = "2021"

[lib]
name = "ams2_overlay_poc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
