[package]
name = "gridvox-poc06"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gridvox_poc06_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Native audio recording dependencies
cpal = "0.16"  # Cross-platform audio I/O (WASAPI on Windows)
rubato = "0.16"  # High-quality resampling (48kHz → 16kHz)
reqwest = { version = "0.12", features = ["json", "blocking"] }  # HTTP client for sending to Python
tokio = { version = "1", features = ["full"] }  # Async runtime

# Windows shared memory access
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winnt", "memoryapi", "handleapi", "minwindef"] }

