[package]
name = "livery-designer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = ["macos-private-api"] }
thiserror = "1.0"
dirs = "5.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }
